--- a/ansible/playbooks/wireguard-client-tasks.yml
+++ b/ansible/playbooks/wireguard-client-tasks.yml
@@ -15,7 +15,7 @@
     module: template
     src: ../templates/wg0_client.conf.j2
     mode: 0600
-    dest: "../../out/vpn/{{ inventory_hostname }}/player{{ item }}.conf"
+    dest: "../out/vpn/{{ inventory_hostname }}/player{{ item }}.conf"
     force: true
 
 - name: "Add peer to the server"
