--- a/ansible/playbooks/master.yml
+++ b/ansible/playbooks/master.yml
@@ -7,7 +7,8 @@
       path: "../out"
       state: absent
 
-  #  import_playbook: gameserver.yml
+- name: Configure Gameserver
+  import_playbook: gameserver.yml
 - name: Configure vpn infrastructure
   import_playbook: vpns.yml
 - name: Configure vulnboxes
