--- a/ansible/roles/vpn/defaults/main.yml
+++ b/ansible/roles/vpn/defaults/main.yml
@@ -1,1 +1,2 @@
-vpn_client_files_output_directory: "../out/vpns/"
+vpn_client_files_output_directory: "out/vpns/"
+vpn_endpoint_address: ansible_default_ipv4.address
