Ora fa il setup di ovn quando il cluster è formato da più di 3 nodi

--- a/cluster/roles/ovn/tasks/main.yml
+++ b/cluster/roles/ovn/tasks/main.yml
@@ -7,11 +7,18 @@
   package:
     name:
       - "{{ ovnhost }}"
-      - "{{ ovncentral }}"
     state: latest
   become: yes
 
 block:
+- name: Install ovn packages
+  package:
+    name:
+      - "{{ ovncentral }}"
+    state: latest
+  become: yes
+  when: inventory_hostname == server_1 or inventory_hostname == server_2 or inventory_hostname == server_3
+
   - name: Set local as current host
     set_fact:
       local: "{{ inventory_hostname }}"
@@ -35,6 +42,7 @@ block:
       name: ovn-central
       state: restarted
     become: yes
+    when: inventory_hostname == server_1 or inventory_hostname == server_2 or inventory_hostname == server_3
 
   - name: Configure Open vSwitch
     shell: "ovs-vsctl set open_vswitch . external_ids:ovn-remote=tcp:{{ server_1 }}:6642,tcp:{{ server_2 }}:6642,tcp:{{ server_3 }}:6642 external_ids:ovn-encap-type=geneve external_ids:ovn-encap-ip={{ local }}"
@@ -47,8 +55,16 @@ block:
 when: ansible_play_hosts | length > 2
 
 block:
+- name: Install ovn packages
+  package:
+    name:
+      - "{{ ovncentral }}"
+    state: latest
+  become: yes
+
   - name: Configure Open vSwitch
     shell: "sudo ovs-vsctl set open_vswitch . external_ids:ovn-remote=unix:/run/ovn/ovnsb_db.sock external_ids:ovn-encap-type=geneve external_ids:ovn-encap-ip=127.0.0.1"
     become: yes
     register: command_output
+    
 when: ansible_play_hosts | lenght == 1
