--- a/configs.json.example
+++ b/configs.json.example
@@ -9,7 +9,8 @@
                         "gameserver-network": "network",
                         "vulnboxes-network": "network",
                         "vpn-servers-networks": "network"
-                }
+                },
+                "player_number": 6
         },
         "incus-cluster": {
                 "nodes": {
@@ -20,7 +21,6 @@
                 "project": "deafult",
                 "instances_type": "container",
 
-                "player_number": 6,
                 "remote": "local"
         },
 }
