Scritti i tasks per la configurazione del cluster

--- a/ansible/roles/cluster/tasks/main.yml
+++ b/ansible/roles/cluster/tasks/main.yml
@@ -1,5 +1,45 @@
-- name: "Init bootstrap server"
+- name: Set server_name
+  set_fact:
+    server_name: "{{ nodes_name[inventory_hostname] }}"
 
-- name: "Grab cluster certificate"
+- name: Set local as current host
+  set_fact:
+    server_address: "{{ inventory_hostname }}"
 
-- name: "Set up other nodes"
+- block:
+  - name: "Copy init file on boostrap server"
+    template:
+      src: templates/bootstrap.yaml.j2
+      dest: /tmp/init.yaml
+    when: inventory_hostname == cluster_address
+
+  - name: "Set up bootstrap server"
+    shell: incus admin init --preseed < /tmp/init.yaml
+    when: inventory_hostname == cluster_address
+
+  - name: "Generate members tokens"
+    include_tasks: generate_tokens.yml
+    loop: "{{ nodes_name.values() }}"
+    when: inventory_hostname == cluster_address
+
+  - name: "Set token"
+    set_fact:
+      token: "{{ hostvars[cluster_address].tokens[server_name] }}"
+    when: inventory_hostname != cluster_address
+
+  - name: "Debug"
+    debug:
+      msg: "{{ token }}"
+    when: inventory_hostname != cluster_address
+
+  - name: "Copy init file on other nodes"
+    template:
+      src: templates/cluster-member.yaml.j2
+      dest: /tmp/init.yaml
+    when: inventory_hostname != cluster_address
+
+  - name: "init incus"
+    shell: incus admin init --preseed < /tmp/init.yaml
+    when: inventory_hostname != cluster_address
+  
+  become: yes
