--- a/ansible/roles/ovn/tasks/main.yml
+++ b/ansible/roles/ovn/tasks/main.yml
@@ -64,4 +64,4 @@
     become: yes
     register: command_output
     
-  when: ansible_play_hosts | lenght == 1
+  when: ansible_play_hosts | length == 1
