Separati role cluster e ovn

--- a/ansible/cluster.yml
+++ b/ansible/cluster.yml
@@ -1,5 +1,9 @@
 - hosts: cluster_nodes
-  serial: 1
   roles:
     - ovn
+  
+- hosts: cluster_nodes
+  serial: 1
+  roles:
     - cluster
+  when: cluster_nodes | lenght > 2
