Aggiunto task per l'esecuzione di terraform tramite ansible

--- a/ansible/ad-platform.yml
+++ b/ansible/ad-platform.yml
@@ -1,3 +1,13 @@
+- hosts: localhost
+  ansible_connection: local
+  tasks:
+    - name: Basic deploy of a service
+      community.general.terraform:
+        project_path: '{{ terraform }}'
+        force_init: true
+        state: present
+
+
 - hosts: vulnboxes
   roles:
     - vulnbox
