Fixed error about syntax

--- a/ansible/roles/ovn/tasks/main.yml
+++ b/ansible/roles/ovn/tasks/main.yml
@@ -40,8 +40,9 @@
       when: inventory_hostname == server_1 or inventory_hostname == server_2 or inventory_hostname == server_3
 
   - name: Configure Open vSwitch
-    shell: "ovs-vsctl set open_vswitch . external_ids:ovn-remote=tcp:{{ server_1 }}:6642,tcp:{{ server_2 }}:6642,tcp:{{ server_3 }}:6642 external_ids:ovn-encap-type=geneve external_ids:ovn-encap-ip={{ local }}"
-      register: command_output
+    command: >
+      ovs-vsctl set open_vswitch . external_ids:ovn-remote=tcp:{{ server_1 }}:6642,tcp:{{ server_2 }}:6642,tcp:{{ server_3 }}:6642 external_ids:ovn-encap-type=geneve external_ids:ovn-encap-ip={{ local }}
+    register: command_output
 
   when: ansible_play_hosts | length > 2
 
@@ -53,7 +54,8 @@
       state: latest
   
   - name: Configure Open vSwitch
-    shell: "sudo ovs-vsctl set open_vswitch . external_ids:ovn-remote=unix:/run/ovn/ovnsb_db.sock external_ids:ovn-encap-type=geneve external_ids:ovn-encap-ip=127.0.0.1"
-      register: command_output
+    command: > 
+      ovs-vsctl set open_vswitch . external_ids:ovn-remote=unix:/run/ovn/ovnsb_db.sock external_ids:ovn-encap-type=geneve external_ids:ovn-encap-ip=127.0.0.1
+    register: command_output
     
   when: ansible_play_hosts | length == 1
