--- a/ansible/roles/ovn/tasks/main.yml
+++ b/ansible/roles/ovn/tasks/main.yml
@@ -8,6 +8,7 @@
     name:
       - "{{ ovnhost }}"
     state: latest
+  become: yes
 
 - block:
   - name: Install ovn packages
@@ -16,6 +17,7 @@
         - "{{ ovncentral }}"
       state: latest
       when: inventory_hostname == server_1 or inventory_hostname == server_2 or inventory_hostname == server_3
+    become: yes
 
   - name: Set local as current host
     set_fact:
@@ -26,23 +28,26 @@
       src: templates/bootstrap-ovn-central.conf.j2
       dest: /etc/default/ovn-central
     when: inventory_hostname == server_1
-  
+    become: yes
+
   - name: Set up server 2 and 3
     template:
       src: templates/ovn-central.conf.j2
       dest: /etc/default/ovn-central
     when: inventory_hostname == server_2 or inventory_hostname == server_3
-  
+    become: yes
+
   - name: Restart ovn-central
     systemd_service:
       name: ovn-central
       state: restarted
       when: inventory_hostname == server_1 or inventory_hostname == server_2 or inventory_hostname == server_3
+    become: yes
 
   - name: Configure Open vSwitch
     command: >
       ovs-vsctl set open_vswitch . external_ids:ovn-remote=tcp:{{ server_1 }}:6642,tcp:{{ server_2 }}:6642,tcp:{{ server_3 }}:6642 external_ids:ovn-encap-type=geneve external_ids:ovn-encap-ip={{ local }}
-    register: command_output
+    become: yes
 
   when: ansible_play_hosts | length > 2
 
@@ -52,10 +57,11 @@
       name:
         - "{{ ovncentral }}"
       state: latest
-  
+    become: yes
+
   - name: Configure Open vSwitch
     command: > 
       ovs-vsctl set open_vswitch . external_ids:ovn-remote=unix:/run/ovn/ovnsb_db.sock external_ids:ovn-encap-type=geneve external_ids:ovn-encap-ip=127.0.0.1
-    register: command_output
-    
+    become: yes
+
   when: ansible_play_hosts | length == 1
